# goit-pythonweb-hw-03

./: .gitignore  Dockerfile  README.md  config.ini  main.py  pyproject.toml  requirements.txt
src/services/: app.py  http_handler.py
src/templates/: error.html  index.html  message.html  messages_list.html
src/utils/: enviroment.py  storage.py
